--- a/src/Admin/changepass.form
+++ b/src/Admin/changepass.form
@@ -368,14 +368,14 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="66" green="0" red="0" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Fullname"/>
+            <Property name="text" type="java.lang.String" value="Create a new strong password"/>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
           </AuxValues>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="80" y="80" width="300" height="50"/>
+              <AbsoluteConstraints x="80" y="80" width="350" height="50"/>
             </Constraint>
           </Constraints>
         </Component>
