--- a/src/User/withdraw.form
+++ b/src/User/withdraw.form
@@ -56,7 +56,7 @@
               <Color blue="66" green="0" red="0" type="rgb"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="0"/>
-            <Property name="text" type="java.lang.String" value="Amount to Deposit"/>
+            <Property name="text" type="java.lang.String" value="Amount to Withdraw"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel15">
@@ -69,6 +69,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="amount">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="amountActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="confirmwithdraw">
           <Properties>
@@ -248,7 +251,7 @@
                   <Font name="Tahoma" size="14" style="1"/>
                 </Property>
                 <Property name="horizontalAlignment" type="int" value="0"/>
-                <Property name="text" type="java.lang.String" value="50"/>
+                <Property name="text" type="java.lang.String" value="500"/>
               </Properties>
             </Component>
           </SubComponents>
@@ -293,7 +296,7 @@
                   <Font name="Tahoma" size="14" style="1"/>
                 </Property>
                 <Property name="horizontalAlignment" type="int" value="0"/>
-                <Property name="text" type="java.lang.String" value="100"/>
+                <Property name="text" type="java.lang.String" value="800"/>
               </Properties>
             </Component>
           </SubComponents>
@@ -338,7 +341,7 @@
                   <Font name="Tahoma" size="14" style="1"/>
                 </Property>
                 <Property name="horizontalAlignment" type="int" value="0"/>
-                <Property name="text" type="java.lang.String" value="150"/>
+                <Property name="text" type="java.lang.String" value="1000"/>
               </Properties>
             </Component>
           </SubComponents>
@@ -383,7 +386,7 @@
                   <Font name="Tahoma" size="14" style="1"/>
                 </Property>
                 <Property name="horizontalAlignment" type="int" value="0"/>
-                <Property name="text" type="java.lang.String" value="200"/>
+                <Property name="text" type="java.lang.String" value="1500"/>
               </Properties>
             </Component>
           </SubComponents>
@@ -428,7 +431,7 @@
                   <Font name="Tahoma" size="14" style="1"/>
                 </Property>
                 <Property name="horizontalAlignment" type="int" value="0"/>
-                <Property name="text" type="java.lang.String" value="250"/>
+                <Property name="text" type="java.lang.String" value="3000"/>
               </Properties>
             </Component>
           </SubComponents>
@@ -473,7 +476,7 @@
                   <Font name="Tahoma" size="14" style="1"/>
                 </Property>
                 <Property name="horizontalAlignment" type="int" value="0"/>
-                <Property name="text" type="java.lang.String" value="500"/>
+                <Property name="text" type="java.lang.String" value="5000"/>
               </Properties>
             </Component>
           </SubComponents>
@@ -518,7 +521,7 @@
                   <Font name="Tahoma" size="14" style="1"/>
                 </Property>
                 <Property name="horizontalAlignment" type="int" value="0"/>
-                <Property name="text" type="java.lang.String" value="800"/>
+                <Property name="text" type="java.lang.String" value="8000"/>
               </Properties>
             </Component>
           </SubComponents>
@@ -563,7 +566,7 @@
                   <Font name="Tahoma" size="14" style="1"/>
                 </Property>
                 <Property name="horizontalAlignment" type="int" value="0"/>
-                <Property name="text" type="java.lang.String" value="1000"/>
+                <Property name="text" type="java.lang.String" value="10000"/>
               </Properties>
             </Component>
           </SubComponents>
